--- a/less/windows/posted_results.less
+++ b/less/windows/posted_results.less
@@ -10,6 +10,17 @@
 			width: 100%;
 			overflow-y: auto;
 			overflow-x: hidden;
+			&::after{
+				content: "";
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				font-family: cursive;
+				margin-right: -50%;
+				transform: translate(-50%, -50%);
+				font-size: 20px;
+				color: grey;
+			}
 		}
 
 		table {
@@ -54,14 +65,17 @@
 				}
 
 				&.table_row_baby_data{
+
 					width: 100%;
-					background: #FFF;
+					background-color: #FFFFFF;
+					color: inherit;
 					cursor: pointer;
 					.border-radius(5px);
 					.transition(all, 0.30s, ease-in-out);
 
 					&:hover{
 						color: #FFF;
+						//background-color: extend();
 						font-weight: bold;
 					}
 				}
